syntax = "proto3";

package user;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "tx-demo/proto/user";

// 用户服务
service UserService {
  // 用户注册
  rpc Register (RegisterRequest) returns (RegisterResponse);

  // 用户登录
  rpc Login (LoginRequest) returns (LoginResponse);

  // 获取用户信息
  rpc GetUserInfo (google.protobuf.Empty) returns (UserInfoResponse);
}

// 注册请求
message RegisterRequest {
  string username = 1;
  string password = 2;
  string like = 3; // 用户喜好
}

// 注册响应
message RegisterResponse {
  string user_id = 1;
  string message = 2;
}

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginResponse {
  string access_token = 1;
  int64 expires_in = 2; // 过期时间（秒）
}

// 用户信息响应
message UserInfoResponse {
  string user_id = 1;
  string username = 2;
  string like = 3;
  google.protobuf.Timestamp create_at = 4;
  google.protobuf.Timestamp update_at = 5;
}